Fix spell issues

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,11 +2,21 @@
     "cSpell.words": [
         "Addtl",
         "Cdtr",
+        "Cstmr",
         "IBAN",
+        "Initn",
         "Instd",
+        "LBRI",
+        "PRCP",
         "Pstl",
         "Purp",
+        "Sepa",
+        "SEPA",
         "Strd",
+        "TAXS",
+        "wiseconverter",
+        "wiseman",
         "Wiseman"
-    ]
+    ],
+    "cSpell.language": "en,ru,sl"
 }
