--- a/packages/wise_toolkit/pubspec.yaml
+++ b/packages/wise_toolkit/pubspec.yaml
@@ -5,7 +5,12 @@ version: 0.1.0
 publish_to: 'none'
 
 environment:
-  sdk: '>=2.19.6 <3.0.0'
+  sdk: '>=3.0.0'
 
+dependencies: 
+  list_ext: ^1.0.6
+  
 dev_dependencies:
   flutter_lints: ^2.0.0
+  test: ^1.24.6
+  tuple: ^2.0.2
