--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,14 +2,17 @@ name: wise_converter
 description: Converter utils for Wise.
 version: 0.1.0
 
+publish_to: 'none'
+
 environment:
   sdk: '>=2.16.1 <3.0.0'
-
 
 dependencies:
   args: ^2.0.0
   shelf: ^1.1.0
   shelf_router: ^1.0.0
+  wise_toolkit:
+    path: ./packages/wise_toolkit/
   xml: ^6.0.1
 
 dev_dependencies:
